Completando el gestor de carreras

--- a/Proyecto_Jugadores/src/interfaz/Corredores/Alta_Corredor.form
+++ b/Proyecto_Jugadores/src/interfaz/Corredores/Alta_Corredor.form
@@ -104,6 +104,9 @@
       <Properties>
         <Property name="text" type="java.lang.String" value="dd-MM-aaaa"/>
       </Properties>
+      <Events>
+        <EventHandler event="actionPerformed" listener="java.awt.event.ActionListener" parameters="java.awt.event.ActionEvent" handler="jTextFieldFechaNacimientoCorredorActionPerformed"/>
+      </Events>
     </Component>
     <Component class="javax.swing.JTextField" name="jTextFieldDireccionCorredor">
     </Component>
@@ -138,6 +141,9 @@
       <Properties>
         <Property name="text" type="java.lang.String" value="Alta"/>
       </Properties>
+      <Events>
+        <EventHandler event="actionPerformed" listener="java.awt.event.ActionListener" parameters="java.awt.event.ActionEvent" handler="jButtonAltaCorredorActionPerformed"/>
+      </Events>
     </Component>
     <Component class="javax.swing.JButton" name="jButtonCancelarAltaCorredor">
       <Properties>
