--- a/Proyecto_Jugadores/src/interfaz/Corredores/Modificar_Corredor.form
+++ b/Proyecto_Jugadores/src/interfaz/Corredores/Modificar_Corredor.form
@@ -109,10 +109,10 @@
               <EmptySpace max="-2" attributes="0"/>
               <Component id="jScrollPane1" min="-2" pref="103" max="-2" attributes="0"/>
               <EmptySpace type="separate" max="-2" attributes="0"/>
-              <Group type="103" groupAlignment="3" attributes="0">
-                  <Component id="jLabel4" alignment="3" min="-2" max="-2" attributes="0"/>
+              <Group type="103" groupAlignment="0" attributes="0">
                   <Component id="jButtonActualizar" alignment="0" min="-2" pref="27" max="-2" attributes="0"/>
                   <Component id="jComboBoxCorredores" alignment="1" min="-2" pref="27" max="-2" attributes="0"/>
+                  <Component id="jLabel4" min="-2" max="-2" attributes="0"/>
               </Group>
               <EmptySpace min="-2" pref="28" max="-2" attributes="0"/>
               <Group type="103" groupAlignment="0" max="-2" attributes="0">
