--- a/Proyecto_Jugadores/src/interfaz/Carreras/Alta_Carrera.form
+++ b/Proyecto_Jugadores/src/interfaz/Carreras/Alta_Carrera.form
@@ -85,14 +85,14 @@
               <Group type="103" groupAlignment="3" attributes="0">
                   <Component id="jLabel5" alignment="3" min="-2" max="-2" attributes="0"/>
                   <Component id="jComboBoxCorredores" alignment="3" min="-2" max="-2" attributes="0"/>
-                  <Component id="jButtonAnadirCorredorCarrera" alignment="3" min="-2" pref="20" max="-2" attributes="0"/>
+                  <Component id="jButtonAnadirCorredorCarrera" alignment="3" min="-2" max="-2" attributes="0"/>
               </Group>
               <EmptySpace min="-2" pref="24" max="-2" attributes="0"/>
               <Group type="103" groupAlignment="3" attributes="0">
                   <Component id="jButtonCancelarAltaCorredor" alignment="3" min="-2" max="-2" attributes="0"/>
                   <Component id="jButtonAltaCorredor" alignment="3" min="-2" max="-2" attributes="0"/>
               </Group>
-              <EmptySpace pref="42" max="32767" attributes="0"/>
+              <EmptySpace pref="39" max="32767" attributes="0"/>
           </Group>
       </Group>
     </DimensionLayout>
@@ -165,6 +165,9 @@
           <StringArray count="0"/>
         </Property>
       </Properties>
+      <Events>
+        <EventHandler event="actionPerformed" listener="java.awt.event.ActionListener" parameters="java.awt.event.ActionEvent" handler="jComboBoxCorredoresActionPerformed"/>
+      </Events>
       <AuxValues>
         <AuxValue name="JavaCodeGenerator_TypeParameters" type="java.lang.String" value="&lt;String&gt;"/>
       </AuxValues>
